k8s/customer-service/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: customer-service

spec:
  type: NodePort

  selector:
    app: customer-service

  ports:
    - port: 80
      targetPort: 8082
      nodePort: 30009
