k8s/customer-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: customer-service-ingress

spec:
  rules:
    - host: customer-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-service
                port:
                  number: 80
